# mcp-cookie-cutter

./: .gitignore  .pypirc.example  CHANGELOG.md  README.md  cookiecutter.json  hook_requirements.txt  pyproject.toml  setup.py
.github/: README.md
.github/workflows/: test.yml
docs/: CURRENT_STATUS.md  EXAMPLE.md  FIXES.md  INTERACTIVE_GENERATION_SUCCESS.md  OPENAPI_DEPENDENCIES.md  OPENAPI_PARSING.md  TEST_GUIDE.md  USAGE.md
hooks/: openapi_generator.py  post_gen_project.py  pre_gen_project.py
mcp_cookie_cutter/template/{{cookiecutter.project_slug}}/: .gitignore
{{cookiecutter.project_slug}}/: .gitignore  CUSTOMIZATION.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
{{cookiecutter.project_slug}}/src/: index.ts  prompts.ts  resources.ts  tools.ts
{{cookiecutter.project_slug}}/src/auth/: apiKey.ts  oauth.ts
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  prompts.py  resources.py  server.py  tools.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/auth/: __init__.py  api_key.py  oauth.py
