{% if cookiecutter.sdk_choice == 'python' -%}
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
{% if cookiecutter.deployment_type == 'remote' -%}
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
{% endif -%}
{% if cookiecutter.auth_mechanism == 'oauth2' -%}
    "authlib>=1.3.0",
{% endif -%}
{% if cookiecutter.auth_mechanism == 'api_key' -%}
    "python-dotenv>=1.0.0",
{% endif -%}
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
{%- endif %}
